# PythonPytestToxGHActions

./: .gitignore  README.md  setup.cfg  slap_that_like_button.py  test_slapping.py  tox.ini
.github/workflows/: tests.yml
src/slapping.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_slapping.py
