[metadata]
name = slapping
description = slap that like button
author = James Murphy
license = MIT
licesnse_file = LICENSE
platforms = unix, linux, ossx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    slapping
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no